[project]
name = "pyrcache"
version = "1.0.5"
authors = [
  { name="Yamac Eren Ay", email="yamacerenay2001@gmail.com" },
]
description = "Python API for accessing RedisCache"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yamaceay/pyrcache"
"Bug Tracker" = "https://github.com/yamaceay/pyrcache/issues"